# h5dataframe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  vulture_whitelist.py
h5dataframe/: __init__.py  _typing.py  array_algos.py  block.py  categorical.py  dataframe.py  manager.py  patch.py
tests/: conftest.py  test_categorical.py  test_creation.py  test_functions.py  test_read_write.py  test_subsetting.py
