[tool.poetry]
name = "h5dataframe"
version = "0.1.0"
description = "Drop-in replacement for pandas DataFrames that allows to store data on an hdf5 file and manipulate data directly from that hdf5 file without loading it in memory."
authors = ["Matteo Bouvier <m.bouvier@vidium-solutions.com>"]
license = "CeCILL-B"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# Uncomment with old infra
# ch5mpy = { git = "git@gilab.vidium.fr:vidium/ch5mpy.git", branch = "master" }
# Comment with old infra
ch5mpy = { git = "git@git.vidium.solutions:vidium/ch5mpy.git", branch = "test_ci_cd" }

pandas = "^2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"
pandas-stubs = "^2.2.1.240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.vulture]
paths = ["h5dataframe", "vulture_whitelist.py"]

[tool.mypy]
strict = true
disable_error_code = ["method-assign"]

[[tool.mypy.overrides]]
module = ['numpy_indexed', 'h5py']
ignore_missing_imports = true
